--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,11 @@
 {
-  "extends": [
-    // "eslint",
-    "standard"
-  ],
+  "extends": "standard",
+  "rules": {
+    "indent": ["error", 2],
+    "quotes": ["error", "single"]
+  },
+  "env": {
+    "browser": true
+  },
   "root": true
 }
