--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,6 @@
 /assets/fonts/fontawesome-free-5
 /node_modules
 /valet.sh
-/valet_links.md
-/valet_version.md
+/valet_links.html
+/valet_version.html
 /vendor
