Fixed color picker in Safari to use active color on load.

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -7,7 +7,7 @@
     "function-max-empty-lines": 1,
     "indentation": [
     	2,{
-    		"baseIndentLevel": "tab"
+    		"baseIndentLevel": 1
     	}
     ],
     "max-nesting-depth": 8,
