--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,11 @@
 {
   "extends": "standard",
+  "globals": {
+    "Sortable": "readonly"
+  },
   "rules": {
     "indent": ["error", 2],
-    "quotes": ["error", "single"]
+    "quotes": ["error", "single"],
   },
   "env": {
     "browser": true
